<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android4Servlet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_name">登录名</string>
    <string name="login_password">登录密码</string>
    <string name="interest">兴趣爱好</string>
    <string name="bt_login">登录</string>
    <string name="bt_reset">重置</string>
    <string name="bt_register">注册</string>
    <string name="che_game">游戏</string>
    <string name="che_music">音乐</string>
    <string name="che_sport">运动</string>
    <string name="imageview_tip">图片加载</string>
    <string name="btn_select">选择上传图片</string>
    <string name="btn_down">下载文件</string>
</resources>
