<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/login_name"/>
         <EditText
            android:id="@+id/reg_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            />       
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/interest"/>
        <CheckBox 
            android:id="@+id/che_game"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/che_game"/>
         <CheckBox 
            android:id="@+id/che_music"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/che_music"/>
          <CheckBox 
            android:id="@+id/che_sport"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/che_sport"/>    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        >
        <Button 
            android:id="@+id/bt_register"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bt_register"/>
         <Button
             android:id="@+id/bt_reset2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bt_reset"/>      
    </LinearLayout>
    

</LinearLayout>
