<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xie.android4servlet.MainActivity" >
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/login_name"/>
         <EditText
            android:id="@+id/edit_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="请输入用户名"
            />       
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/login_password"/>
          <EditText
            android:id="@+id/edit_password"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="请输入用户密码"
            android:password="true"/>      
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        >
        <Button 
            android:id="@+id/bt_login"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bt_login"/>
         <Button
             android:id="@+id/bt_reset"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/bt_reset"/>      
    </LinearLayout>
</LinearLayout>
